--- a/components/wpa_supplicant/CMakeLists.txt
+++ b/components/wpa_supplicant/CMakeLists.txt
@@ -133,3 +133,5 @@ target_compile_definitions(${COMPONENT_LIB} PRIVATE
     CONFIG_SHA256
     CONFIG_DPP
     )
+
+set_property(TARGET ${COMPONENT_LIB} APPEND PROPERTY LINK_INTERFACE_MULTIPLICITY 3)
