--- a/components/esp_timer/Kconfig
+++ b/components/esp_timer/Kconfig
@@ -9,7 +9,13 @@ menu "High resolution timer (esp_timer)"
             This option has some effect on timer performance and the amount of memory used for timer
             storage, and should only be used for debugging/testing purposes.
 
-    config ESP_TIMER_RTC_USE  # [refactor-todo] remove when timekeeping and persistence are separate
+    config ESP_TIME_FUNCS_USE_RTC_TIMER  # [refactor-todo] remove when timekeeping and persistence are separate
+        bool
+
+    config ESP_TIME_FUNCS_USE_ESP_TIMER  # [refactor-todo] remove when timekeeping and persistence are separate
+        bool
+
+    config ESP_TIME_FUNCS_USE_NONE  # [refactor-todo] remove when timekeeping and persistence are separate
         bool
 
     config ESP_TIMER_TASK_STACK_SIZE
