--- a/components/esp_hw_support/CMakeLists.txt
+++ b/components/esp_hw_support/CMakeLists.txt
@@ -7,11 +7,11 @@ endif()
 
 set(srcs "compare_set.c" "cpu_util.c")
 if(NOT BOOTLOADER_BUILD)
-    list(APPEND srcs "clk_ctrl_os.c" "mac_addr.c" "hw_random.c")
+    list(APPEND srcs "esp_clk.c" "clk_ctrl_os.c" "mac_addr.c" "hw_random.c")
 endif()
 
 idf_component_register(SRCS ${srcs}
-                       INCLUDE_DIRS include
+                       INCLUDE_DIRS include include/soc
                        REQUIRES ${requires}
                        PRIV_REQUIRES efuse
                        LDFRAGMENTS linker.lf)
