--- a/components/esp_wifi/CMakeLists.txt
+++ b/components/esp_wifi/CMakeLists.txt
@@ -37,7 +37,7 @@ idf_component_register(SRCS "src/coexist.c"
                     INCLUDE_DIRS "include" "${idf_target}/include"
                     REQUIRES esp_event
                     PRIV_REQUIRES driver esptool_py esp_netif esp_pm esp_timer nvs_flash
-                                  wpa_supplicant ${extra_priv_requires}
+                                  wpa_supplicant hal ${extra_priv_requires}
                     LDFRAGMENTS "${ldfragments}")
 
 idf_build_get_property(build_dir BUILD_DIR)
