--- a/components/esp_system/CMakeLists.txt
+++ b/components/esp_system/CMakeLists.txt
@@ -13,7 +13,6 @@ else()
     list(APPEND srcs "crosscore_int.c"
             "esp_err.c"
             "freertos_hooks.c"
-            "intr_alloc.c"
             "int_wdt.c"
             "panic.c"
             "esp_system.c"
@@ -33,7 +32,7 @@ else()
                                     # [refactor-todo] requirements due to init code,
                                     # should be removable once using component init functions
                                     # link-time registration is used.
-                                    esp_pm app_update nvs_flash pthread app_trace esp_gdbstub esp_ipc
+                                    esp_pm app_update nvs_flash pthread app_trace esp_gdbstub
                                     espcoredump
                         LDFRAGMENTS "linker.lf" "app.lf")
     add_subdirectory(port)
